--- a/charts/perfana/Chart.yaml
+++ b/charts/perfana/Chart.yaml
@@ -1,7 +1,7 @@
-apiVersion: v2
+apiVersion: v1
 appVersion: 2.30.3
 description: Perfana front end
-name: perfana-fe
+name: perfana
 version: 1.0.0
 maintainers:
   - name: Daniel Moll
