--- a/charts/perfana/values.yaml
+++ b/charts/perfana/values.yaml
@@ -18,20 +18,20 @@ perfanaFe:
 
   ingress:
     enabled: false
-    annotations:
-      kubernetes.io/ingress.class: nginx
-      nginx.ingress.kubernetes.io/affinity: cookie
-      nginx.ingress.kubernetes.io/session-cookie-hash: sha1
-      nginx.ingress.kubernetes.io/session-cookie-name: route
+    # annotations:
+    #   kubernetes.io/ingress.class: nginx
+    #   nginx.ingress.kubernetes.io/affinity: cookie
+    #   nginx.ingress.kubernetes.io/session-cookie-hash: sha1
+    #   nginx.ingress.kubernetes.io/session-cookie-name: route
     
-    path: /
-    hosts:
-      - host: perfana.yourhost.com
+    # path: /
+    # hosts:
+    #   - host: perfana.yourhost.com
 
-    tls:
-    - secretName: perfana.yourhost.com-tls
-      hosts:
-        - perfana.yourhost.com
+    # tls:
+    # - secretName: perfana.yourhost.com-tls
+    #   hosts:
+    #     - perfana.yourhost.com
 
   resources:
     # We usually recommend not to specify default resources and to leave this as a conscious
