--- a/charts/perfana/templates/secret-mongo_url.yaml
+++ b/charts/perfana/templates/secret-mongo_url.yaml
@@ -1,9 +1,11 @@
+{{- if not .Values.existingSecret }}
 apiVersion: v1
 stringData:
   MONGO_URL: {{ .Values.mongo.url}}
 kind: Secret
 metadata:
-  name: mongo-url
+  name: {{ .Values.existingSecret.mongoUrl | default "mongo-url" }}
   namespace: perfana
 type: Opaque
+{{- end }}
 
