--- a/charts/perfana/templates/secret-meteor-settings.yaml
+++ b/charts/perfana/templates/secret-meteor-settings.yaml
@@ -1,10 +1,11 @@
+{{- if not .Values.existingSecret }}
 apiVersion: v1
 stringData:
   METEOR_SETTINGS: {{ .Values.meteorSettings | toJson | quote  }}
-
 kind: Secret
 metadata:
   name: meteor-settings
   namespace: perfana
 type: Opaque
+{{- end }}
 
