--- a/charts/perfana/templates/secret-mongo_oplog_url.yaml
+++ b/charts/perfana/templates/secret-mongo_oplog_url.yaml
@@ -1,11 +1,13 @@
+{{- if not .Values.existingSecret }}
 apiVersion: v1
 stringData:
   MONGO_OPLOG_URL: {{ .Values.mongo.oplogUrl}}
 kind: Secret
 metadata:
-  name: mongo-oplog-url
+  name: {{ .Values.existingSecret.mongoOplogUrl | default "mongo-oplog-url" }}
   namespace: perfana
 type: Opaque
+{{- end }}
 
 
 
