--- a/charts/perfana/secrets.yaml
+++ b/charts/perfana/secrets.yaml
@@ -5,6 +5,11 @@ mongo:
 
 # METEOR_SETTINGS
 meteorSettings:
+
+    # https://docs.perfana.io/docs/settings/settings.html#organisations
+    organisations:
+      - name: "Perfana"
+        description: "Perfana default organisation"
     # https://docs.perfana.io/docs/settings/settings.html#adminemail
     adminEmail: admin@perfana.io
    
@@ -27,15 +32,15 @@ meteorSettings:
     
     # https://docs.perfana.io/docs/administration/administration.html#grafana-configuration
     grafanaInstances:
-        - label: Demo
-          clientUrl: http://localhost:3000
-          serverUrl: http://grafana:3000
-          orgId: "1"
-          apiKey: apikey
-          snapshotInstance: true
-          trendsInstance: true
-          username: perfana
-          password: perfana
+      - label: Demo
+        clientUrl: http://localhost:3000
+        serverUrl: http://grafana:3000
+        orgId: "1"
+        apiKey: apikey
+        snapshotInstance: true
+        trendsInstance: true
+        username: perfana
+        password: perfana
     
     # https://docs.perfana.io/docs/settings/settings.html#perfanaurl      
     perfanaUrl: http://localhost:4000
