--- a/charts/perfana/Chart.yaml
+++ b/charts/perfana/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 appVersion: 2.31.1
-description: Perfana front end
+description: Perfana
 name: perfana
 version: 1.2.0
 maintainers:
