--- a/charts/perfana/values.yaml
+++ b/charts/perfana/values.yaml
@@ -1,45 +1,36 @@
-# perfana-fe values.
+# perfana component values.
 
 # use existing secrets, e.g. when using sealed secrets
-# existingSecret:
-#   mongoUrl: mongo-url
-#   mongoOplogUrl: mongo-oplog-url
-#   meteorSettings: meteor-settings
-      
-
+#existingSecret:
+#  mongoUrl: mongo-url
+#  mongoOplogUrl: mongo-oplog-url
+#  meteorSettings: meteor-settings
+    
 perfanaFe:
-
   replicaCount: 1
-
   image:
     repository: perfana/perfana-fe
-    tag: 2.30.3
+    tag: perfana-2.1.0
     pullPolicy: Always
-
   deploymentStrategy: RollingUpdate
-
   service:
     type: ClusterIP
     port: 3000
     targetPort: http
-
   ingress:
     enabled: false
     # annotations:
     #   kubernetes.io/ingress.class: nginx
-    #   nginx.ingress.kubernetes.io/affinity: cookie
-    #   nginx.ingress.kubernetes.io/session-cookie-hash: sha1
-    #   nginx.ingress.kubernetes.io/session-cookie-name: route
-    
-    # path: /
+    #   cert-manager.io/cluster-issuer: "<issuer>"
     # hosts:
-    #   - host: perfana.yourhost.com
-
+    #   - host: <hostname>
+    #     paths:
+    #       - path: /
+    #         pathType: ImplementationSpecific
     # tls:
-    # - secretName: perfana.yourhost.com-tls
-    #   hosts:
-    #     - perfana.yourhost.com
-
+    #   - hosts:
+    #       - <hostname>
+    #     secretName: perfana-<hostname>-tls
   resources:
     # We usually recommend not to specify default resources and to leave this as a conscious
     # choice for the user. This also increases chances charts run on environments with little
@@ -51,29 +42,21 @@ perfanaFe:
     # requests:
     #  cpu: 1
     #  memory: 512Mi
-
-  ## Environment variables 
+  ## Environment variables
   env:
     ROOT_URL: http://localhost:4000
     PORT: 3000
-
   nodeSelector: {}
-
   tolerations: []
-
   affinity: {}
 
-
 perfanaGrafana:
-
   replicaCount: 1
-
   image:
     repository: perfana/perfana-grafana
-    tag: 2.7.0
+    tag: perfana-2.1.0
     pullPolicy: Always
-
-  resources: {} 
+  resources: {}
     # We usually recommend not to specify default resources and to leave this as a conscious
     # choice for the user. This also increases chances charts run on environments with little
     # resources, such as Minikube. If you do want to specify resources, uncomment the following
@@ -84,32 +67,24 @@ perfanaGrafana:
     # requests:
     #  cpu: 500m
     #  memory: 512Mi
-
   nodeSelector: {}
-
   tolerations: []
-
   affinity: {}
-
-  ## Sync interval 
+  ## Sync interval
   env:
     SYNC_INTERVAL: 30000  # 30 seconds
   
 perfanaCheck:
-
   replicaCount: 1
-
   image:
     repository: perfana/perfana-check
-    tag: 2.4.0
+    tag: perfana-2.1.0
     pullPolicy: Always
-    
   service:
     type: ClusterIP
     port: 9191
     targetPort: http
-
-  resources: {} 
+  resources: {}
     # We usually recommend not to specify default resources and to leave this as a conscious
     # choice for the user. This also increases chances charts run on environments with little
     # resources, such as Minikube. If you do want to specify resources, uncomment the following
@@ -120,29 +95,21 @@ perfanaCheck:
     # requests:
     #  cpu: 500m
     #  memory: 512Mi
-
   nodeSelector: {}
-
   tolerations: []
-
   affinity: {}
-
   ## Environment variables
   env: 
     SPRING_PROFILES_ACTIVE: "prd"
     JAVA_TOOL_OPTIONS: -Dlogging.level.root=INFO
 
-
 perfanaSnapshot:
-
   replicaCount: 1
-
   image:
     repository: perfana/perfana-snapshot
-    tag: 2.7.1
+    tag: perfana-2.1.0
     pullPolicy: Always
-    
-  resources: {} 
+  resources: {}
     # We usually recommend not to specify default resources and to leave this as a conscious
     # choice for the user. This also increases chances charts run on environments with little
     # resources, such as Minikube. If you do want to specify resources, uncomment the following
@@ -153,10 +120,6 @@ perfanaSnapshot:
     # requests:
     #  cpu: 1
     #  memory: 1Gi
-
   nodeSelector: {}
-
   tolerations: []
-
   affinity: {}
-
