--- a/charts/perfana/Chart.yaml
+++ b/charts/perfana/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
-appVersion: 2.2.0
-description: Perfana
+appVersion: 2.2.1
+description: Perfana Performance Hub
 name: perfana
-version: 1.4.0
+version: 1.4.1
 maintainers:
-  - name: Daniel Moll
-    email: daniel@perfana.io
+  - name: Perfana Dev Team
+    email: support@perfana.io
