--- a/charts/perfana/templates/secret-mongo_url.yaml
+++ b/charts/perfana/templates/secret-mongo_url.yaml
@@ -4,7 +4,7 @@ stringData:
   MONGO_URL: {{ .Values.mongo.url}}
 kind: Secret
 metadata:
-  name: {{ .Values.mongoUrl | default "mongo-url" }}
+  name: mongo-url
   namespace: perfana
 type: Opaque
 {{- end }}
