--- a/charts/perfana/templates/secret-mongo_oplog_url.yaml
+++ b/charts/perfana/templates/secret-mongo_oplog_url.yaml
@@ -4,7 +4,7 @@ stringData:
   MONGO_OPLOG_URL: {{ .Values.mongo.oplogUrl}}
 kind: Secret
 metadata:
-  name: {{ .Values.mongoOplogUrl | default "mongo-oplog-url" }}
+  name: mongo-oplog-url
   namespace: perfana
 type: Opaque
 {{- end }}
