--- a/charts/perfana-fixture/Chart.yaml
+++ b/charts/perfana-fixture/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
-appVersion: 2.2.1
+appVersion: perfana-2.3.0
 description: Perfana Performance Hub
 name: perfana-fixture
-version: 1.0.0
+version: 1.1.0
 maintainers:
   - name: Perfana Dev Team
     email: support@perfana.io
