--- a/charts/perfana/Chart.yaml
+++ b/charts/perfana/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
-appVersion: 2.2.1
+appVersion: perfana-2.3.0
 description: Perfana Performance Hub
 name: perfana
-version: 1.5.0
+version: 1.6.0
 maintainers:
   - name: Perfana Dev Team
     email: support@perfana.io
