--- a/charts/perfana/templates/perfana-fe-ingress.yaml
+++ b/charts/perfana/templates/perfana-fe-ingress.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.perfanaFe.enabled -}}
 {{- if .Values.perfanaFe.ingress.enabled -}}
 {{- $ingressPath := .Values.perfanaFe.ingress.path -}}
 apiVersion: networking.k8s.io/v1
@@ -39,4 +40,5 @@ spec:
                   name: http
           {{- end }}
     {{- end }}
+{{- end }}
 {{- end }}
