--- a/charts/perfana/templates/perfana-check-service-account.yaml
+++ b/charts/perfana/templates/perfana-check-service-account.yaml
@@ -2,5 +2,5 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{- if .Values.perfanaCheck.serviceAccount.name }}
+  name: {{ .Values.perfanaCheck.serviceAccount.name }}
 {{- end }}
