Set SPRING_DATA_MONGODB_URI instead of MONGO_URL

--- a/charts/perfana/templates/perfana-check-deployment.yaml
+++ b/charts/perfana/templates/perfana-check-deployment.yaml
@@ -50,7 +50,7 @@ spec:
           #     path: /
           #     port: http
           env: # ENV variables for your project
-          - name: MONGO_URL
+          - name: SPRING_DATA_MONGODB_URI
             valueFrom:
               secretKeyRef:
                 key: MONGO_URL
