Add option for setting ingressClassName in chart

--- a/charts/perfana/templates/perfana-fe-ingress.yaml
+++ b/charts/perfana/templates/perfana-fe-ingress.yaml
@@ -15,6 +15,9 @@ metadata:
 {{ toYaml . | nindent 4 }}
 {{- end }}
 spec:
+  {{- if .Values.perfanaFe.ingress.ingressClassName }}
+  ingressClassName: {{ .Values.perfanaFe.ingress.ingressClassName }}
+  {{- end }}
 {{- if .Values.perfanaFe.ingress.tls }}
   tls:
   {{- range .Values.perfanaFe.ingress.tls }}
