--- a/charts/perfana/templates/perfana-fe-deployment.yaml
+++ b/charts/perfana/templates/perfana-fe-deployment.yaml
@@ -42,6 +42,10 @@ spec:
         - name: perfana-fe
           image: "{{ .Values.perfanaFe.image.repository }}:{{ .Values.perfanaFe.image.tag }}"
           imagePullPolicy: {{ .Values.perfanaFe.image.pullPolicy }}
+          {{- with .Values.perfanaFe.command }}
+          command:
+          {{ toYaml . | nindent 10 }}
+          {{- end}}
           ports:
             - name: {{ .Values.perfanaFe.service.targetPort }}
               containerPort: {{ .Values.perfanaFe.service.port }}
