--- a/charts/perfana/templates/perfana-snapshot-deployment.yaml
+++ b/charts/perfana/templates/perfana-snapshot-deployment.yaml
@@ -37,6 +37,10 @@ spec:
         - name: perfana-snapshot
           image: "{{ .Values.perfanaSnapshot.image.repository }}:{{ .Values.perfanaSnapshot.image.tag }}"
           imagePullPolicy: {{ .Values.perfanaSnapshot.image.pullPolicy }}
+          {{- with .Values.perfanaSnapshot.command }}
+          command:
+          {{ toYaml . | nindent 10 }}
+          {{- end}}
        
           # livenessProbe:
           #   httpGet:
