--- a/charts/perfana/templates/secret-meteor-settings.yaml
+++ b/charts/perfana/templates/secret-meteor-settings.yaml
@@ -1,11 +1,10 @@
-{{- if not .Values.existingSecret }}
+{{- if .Values.meteorSettings.value }}
 apiVersion: v1
 stringData:
-  METEOR_SETTINGS: {{ .Values.meteorSettings | toJson | quote  }}
+  METEOR_SETTINGS: {{ .Values.meteorSettings.value | toJson | quote  }}
 kind: Secret
 metadata:
-  name: meteor-settings
+  name: {{ .Values.meteorSettings.secretName }}
   namespace: perfana
 type: Opaque
 {{- end }}
-
