--- a/charts/perfana/templates/secret-mongo_oplog_url.yaml
+++ b/charts/perfana/templates/secret-mongo_oplog_url.yaml
@@ -1,10 +1,10 @@
-{{- if not .Values.existingSecret }}
+{{- if .Values.mongoOplogUrl.value }}
 apiVersion: v1
 stringData:
-  MONGO_OPLOG_URL: {{ .Values.mongo.oplogUrl}}
+  MONGO_OPLOG_URL: {{ .Values.mongoOplogUrl.value }}
 kind: Secret
 metadata:
-  name: mongo-oplog-url
+  name: {{ .Values.mongoOplogUrl.secretName }}
   namespace: perfana
 type: Opaque
 {{- end }}
