--- a/charts/perfana/templates/secret-mongo_url.yaml
+++ b/charts/perfana/templates/secret-mongo_url.yaml
@@ -1,11 +1,10 @@
-{{- if not .Values.existingSecret }}
+{{- if .Values.mongoUrl.value }}
 apiVersion: v1
 stringData:
-  MONGO_URL: {{ .Values.mongo.url}}
+  MONGO_URL: {{ .Values.mongoUrl.value }}
 kind: Secret
 metadata:
-  name: mongo-url
+  name: {{ .Values.mongoUrl.secretName }}
   namespace: perfana
 type: Opaque
 {{- end }}
-
