Add securityContext support at container-level

--- a/charts/perfana/values.yaml
+++ b/charts/perfana/values.yaml
@@ -16,6 +16,9 @@ meteorSettings:
 imagePullSecrets:
   - name: regcred
 
+# securityContext at container-level
+securityContext: {}
+
 perfanaFe:
   enabled: true
   replicaCount: 1
