--- a/charts/perfana/templates/perfana-check-deployment.yaml
+++ b/charts/perfana/templates/perfana-check-deployment.yaml
@@ -41,6 +41,10 @@ spec:
           command:
           {{ toYaml . | nindent 10 }}
           {{- end}}
+          {{- with .Values.securityContext }}
+          securityContext:
+          {{- toYaml . | nindent 10 }}
+          {{- end }}
           ports:
             - name: {{ .Values.perfanaCheck.service.targetPort }}
               containerPort: {{ .Values.perfanaCheck.service.port }}
