--- a/charts/perfana/templates/perfana-fe-deployment.yaml
+++ b/charts/perfana/templates/perfana-fe-deployment.yaml
@@ -46,6 +46,10 @@ spec:
           command:
           {{ toYaml . | nindent 10 }}
           {{- end}}
+          {{- with .Values.securityContext }}
+          securityContext:
+          {{- toYaml . | nindent 10 }}
+          {{- end }}
           ports:
             - name: {{ .Values.perfanaFe.service.targetPort }}
               containerPort: {{ .Values.perfanaFe.service.port }}
