--- a/charts/perfana/templates/perfana-grafana-deployment.yaml
+++ b/charts/perfana/templates/perfana-grafana-deployment.yaml
@@ -41,7 +41,10 @@ spec:
           command:
           {{ toYaml . | nindent 10 }}
           {{- end}}
-       
+          {{- with .Values.securityContext }}
+          securityContext:
+          {{- toYaml . | nindent 10 }}
+          {{- end }}
           # livenessProbe:
           #   httpGet:
           #     path: /
