use dotenv for passing env vars in node components

--- a/charts/perfana/templates/perfana-check-deployment.yaml
+++ b/charts/perfana/templates/perfana-check-deployment.yaml
@@ -54,13 +54,16 @@ spec:
           #     path: /
           #     port: http
           env: # ENV variables for your project
-          {{- if .Values.mongoUrl.secretName }}
           - name: SPRING_DATA_MONGODB_URI
             valueFrom:
               secretKeyRef:
                 key: MONGO_URL
-                name: {{ .Values.mongoUrl.secretName }}
-          {{- end }}
+              {{- if .Values.dotenvExistingSecret }}
+                name: {{ .Values.dotenvExistingSecret }}
+              {{ else }}
+                name: secret-dotenv
+              {{- end }}
+
           {{- range $key, $value := .Values.perfanaCheck.env }}
           - name: {{ $key }}
             value: '{{ $value }}'
