--- a/charts/perfana/templates/perfana-fe-deployment.yaml
+++ b/charts/perfana/templates/perfana-fe-deployment.yaml
@@ -70,34 +70,36 @@ spec:
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
-          env: # ENV variables for your project
-            {{- if .Values.mongoUrl.secretName }}
-            - name: MONGO_URL
-              valueFrom:
-                secretKeyRef:
-                  key: MONGO_URL
-                  name: {{ .Values.mongoUrl.secretName }}
-            {{- end }}
-            {{- if .Values.mongoOplogUrl.secretName }}
-            - name: MONGO_OPLOG_URL
-              valueFrom:
-                secretKeyRef:
-                  key: MONGO_OPLOG_URL
-                  name: {{ .Values.mongoOplogUrl.secretName }}
-            {{- end }}
-            {{- if .Values.meteorSettings.secretName }}
-            - name: METEOR_SETTINGS
-              valueFrom:
-                secretKeyRef:
-                  key: METEOR_SETTINGS
-                  name: {{ .Values.meteorSettings.secretName }}
-            {{- end }}
+          env: # ENV variables for your project            
         {{- range $key, $value := .Values.perfanaFe.env }}
             - name: {{ $key }}
               value: '{{ $value }}'
         {{- end }}
           resources:
 {{ toYaml .Values.perfanaFe.resources | indent 12 }}
+          volumeMounts:
+          - name: dot-env
+            mountPath: /env/perfana-admin.secret.env
+            subPath: perfana-admin
+          - name: dot-env
+            mountPath: /env/perfana-super-admin.secret.env
+            subPath: perfana-super-admin
+          - name: dot-env
+            mountPath: /env/perfana-api.secret.env
+            subPath: perfana-api
+          - name: dot-env
+            mountPath: /env/perfana-mongo-urls.secret.env
+            subPath: perfana-mongo-urls  
+      volumes:
+      - name: dot-env
+        projected:
+          sources:
+          - secret:
+              {{- if .Values.dotenvExistingSecret }}
+              name: {{ .Values.dotenvExistingSecret }}
+              {{ else }}
+              name: secret-dotenv
+              {{- end }}
     {{- with .Values.perfanaFe.nodeSelector }}
       nodeSelector:
 {{ toYaml . | indent 8 }}
