--- a/charts/perfana/values.yaml
+++ b/charts/perfana/values.yaml
@@ -1,16 +1,11 @@
 # perfana component values.
 
-# If secretName is non-empty, env variable MONGO_URL, MONGO_OPLOG_URL and METEOR_SETTINGS set by secret.
-# If value is non-empty, the secret is also created (otherwise the secret must be already deployed).
 mongoUrl:
   secretName: mongo-url 
   value:
-mongoOplogUrl: 
-  secretName: mongo-url
-  value:
-meteorSettings:
-  secretName: meteor-settings
-  value:
+
+# If dotenvExistingSecret exists chart expects existing secret.
+dotenvExistingSecret: secret-foo 
 
 # optional image pull secret
 imagePullSecrets:
