--- a/charts/perfana/values.yaml
+++ b/charts/perfana/values.yaml
@@ -16,8 +16,8 @@ meteorSettings:
 imagePullSecrets:
   - name: regcred
 
-# securityContext at container-level
 securityContext: {}
+containerSecurityContext: {}
 
 perfanaFe:
   enabled: true
