--- a/charts/perfana/templates/perfana-fe-deployment.yaml
+++ b/charts/perfana/templates/perfana-fe-deployment.yaml
@@ -38,6 +38,10 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      {{- with .Values.securityContext }}
+      securityContext:
+      {{- toYaml . | nindent 8 }}
+      {{- end }}
       containers:
         - name: perfana-fe
           image: "{{ .Values.perfanaFe.image.repository }}:{{ .Values.perfanaFe.image.tag }}"
@@ -46,7 +50,7 @@ spec:
           command:
           {{ toYaml . | nindent 10 }}
           {{- end}}
-          {{- with .Values.securityContext }}
+          {{- with .Values.containerSecurityContext }}
           securityContext:
           {{- toYaml . | nindent 12 }}
           {{- end }}
