--- a/charts/perfana/templates/perfana-grafana-deployment.yaml
+++ b/charts/perfana/templates/perfana-grafana-deployment.yaml
@@ -33,6 +33,10 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      {{- with .Values.securityContext }}
+      securityContext:
+      {{- toYaml . | nindent 8 }}
+      {{- end }}
       containers:
         - name: perfana-grafana
           image: "{{ .Values.perfanaGrafana.image.repository }}:{{ .Values.perfanaGrafana.image.tag }}"
@@ -41,7 +45,7 @@ spec:
           command:
           {{ toYaml . | nindent 10 }}
           {{- end}}
-          {{- with .Values.securityContext }}
+          {{- with .Values.containerSecurityContext }}
           securityContext:
           {{- toYaml . | nindent 12 }}
           {{- end }}
